# competition-algorithm_trading-krx

./: README.md
final/: build_wheel.sh  pyproject.toml
final/krx_competition_20/: trade_func.py
final/krx_competition_20/loader/: api_loader.py  static_loader.py
final/krx_competition_20/processor/: model_processor.py  order_processor.py  sector_processor.py
qualifier/: similiarity_based_trading.ipynb
